--- a/styles.css
+++ b/styles.css
@@ -228,11 +228,11 @@ footer ul {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    column-gap: 25px;
 }
 footer li {
     list-style: none;
     font-size: 2rem;
+    margin: 0 20px;
 }
 footer li a {
     color: #39bdc8;
