--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,9 @@
     box-sizing: border-box;
 }
 body {
-    background-color: #c5e3f6;
+    background: linear-gradient(white,0.5 black,0) ;
     font-family: 'Poppins', sans-serif;
+    border: 2px solid black;
 }
 h3{
     color: black;
@@ -18,7 +19,7 @@ h3{
 header {
     width: 100%;
     height: 60px;
-    background-color: #002651;
+    
 }
 #sidebar {
     position: fixed;
@@ -59,14 +60,13 @@ header {
     left: 0;
 }
 .intro  {
-    background-color: #a6fff2;
     margin: 100px 15px;
     padding: 0 0 40px 0;
     border-radius: 20px;
-    box-shadow: 0 0 10px black;
+ 
 }
 .image {
-    padding: 40px 11% 40px 11%;
+    margin: 40px auto;
 }
 .image img {
     border-radius: 50%;
@@ -81,7 +81,7 @@ header {
     color: blue;
 }
 .skills {
-    background-color: #a6fff2;
+    max-width: none;
     margin: 100px 15px;
     padding: 20px 15px 40px 15px;
     border-radius: 20px;
@@ -155,7 +155,7 @@ header {
     }
 }
 .hobbies {
-    background-color: #a6fff2;
+   
     margin: 100px 15px;
     padding: 40px 0 40px 0;
     border-radius: 20px;
@@ -191,7 +191,7 @@ header {
     margin: 10px 17px;
 }
 .container {
-    background-color: #a6fff2;
+   
     margin: 100px 15px;
     padding: 40px 0 40px 0;
     border-radius: 20px;
@@ -253,16 +253,25 @@ footer li a {
 .desktop {
     display: none;
 }
-
+.desktop1 {
+    display: none;
+}
 @media (min-width: 1024px) {
     .mobile {
         display: none;
     }
+    .mobile1 {
+        display: none;
+    }
+    .desktop1 {
+        display: block;
+    }
+
     .desktop {
         display: inline-block;
         position: fixed;
-
     }
+
     .desktop ul {
         display: flex;
         align-items: center;
@@ -270,37 +279,39 @@ footer li a {
         text-align: center;
         column-gap: 90px;
         margin: 15px 0% 10px 65%;
-        
     }
+
     .desktop ul li {
         list-style: none;  
     }
+
     .desktop ul li a{
         color: #39bdc8;
         text-decoration: none;
     }
+
     .intro {
         display: flex;
-        max-width: 800px;
+        max-width: 1000px;
         margin: 80px auto 0 auto;
     }
+
     .image {
-        padding: 90px 0% 40px 3%;
+        padding: 30px 0% 40px 3%;
     }
+
     .intro h3 {
         padding-top: 35px;
-
-    }
-    .middle {
-        display: flex;
     }
     .skills {
         max-width: 43%;
-        margin: 100px 60px;
+        margin: 100px auto;
         padding: 40px 15px 0px 15px;
+        box-shadow: none;
     }
     .container {
         max-width: 150%;
+        box-shadow: none;
     }
     .row {
         display: flex;
@@ -314,6 +325,7 @@ footer li a {
         max-width: 900px;
         margin: -20px auto 60px auto;
     padding: 30px 0 0 0;
+    box-shadow: none;
     }
     .hobbies ul {
         display: flex;
@@ -326,5 +338,7 @@ footer li a {
     }
     .book-reader {
         margin: 33px 0 0 0;
+    }
+    
 
 }
