--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,8 @@
     box-sizing: border-box;
 }
 body {
-    background: linear-gradient(white,0.5 black,0) ;
+    background: linear-gradient(white, black) ;
     font-family: 'Poppins', sans-serif;
-    border: 2px solid black;
 }
 h3{
     color: black;
@@ -17,8 +16,9 @@ h3{
     
 }
 header {
+    background-color: black;
     width: 100%;
-    height: 60px;
+    height: 100px;
     
 }
 #sidebar {
@@ -40,17 +40,17 @@ header {
 }
 #sidebar li a {
     text-decoration: none;
-    color: grey;
+    color: white;
     
 }
 .toggle-btn {
     position: absolute;
     left: 104%;
-    top: 15px;
+    top: 30px;
 }
 .toggle-btn span {
     display: block;
-    background-color: #39bdc8;
+    background-color:white;
     width: 25px;
     height: 5px;
     margin: 3px;
@@ -80,7 +80,7 @@ header {
     letter-spacing: 1px;
 }
 .about p span {
-    color: blue;
+    color: #9c1de7;
 }
 .skills {
     max-width: none;
@@ -109,16 +109,16 @@ header {
     background: #353b48;
     margin: 10px 0;
     display: block;
-    height: 10px;
+    height: 15px;
     border: 1px solid rgb(0,0,0,0.3);
     border-radius: 3px;
     overflow: hidden;
-    box-shadow: 0 0 6px #2187e7b3;
+    box-shadow: 0 0 6px #4b0375;
 }
 .bar span {
-    height: 9px;
+    height: 14px;
     float: left;
-    background-color: #2187e7;
+    background-color: #9c1de7;
 }
 .html {
     width: 60%;
@@ -172,7 +172,7 @@ header {
 }
 .hobbies li {
     font-size: 5rem;
-    color: #39bdc8;
+    color: white;
     line-height: 5rem;
     list-style: none;
 }
@@ -185,7 +185,8 @@ header {
     line-height: 40px;
 }
 .hobbies-icon {
-    border: 1px solid #39bdc8;
+    border: 1px solid #4b0375;
+    background-color: #9c1de7;
     padding: 10px;
     margin: 10px 0;
 }
@@ -215,12 +216,12 @@ header {
 }
 .card-title {
     font-size: 22px;
-    margin: 10px 0;
+    margin: 10px;
 }
 
 .btn  {
-   background-color: #39bdc8;
-   color: black;
+   background-color: #9c1de7;
+   color: white;
    text-decoration: none;
    margin: 10px;
    padding: 5px 15px;
@@ -234,23 +235,24 @@ footer ul {
 footer li {
     list-style: none;
     font-size: 2rem;
-    margin: 0 20px;
+    margin: 20px 20px;
 }
 footer li a {
-    color: #39bdc8;
+    color: #d6d4d4;
 }
 .phone {
-    color: #39bdc8;
+    color: #d6d4d4;
+    padding: 10px;
     text-align: center;
     margin: 20px;
 }
 .last {
     font-size: 12px;
     height: 60px;
-    background-color: #002651;
+    background-color: black;
     padding: 20px 0;
     text-align: center;
-    color: black;
+    color: white;
 }
 .desktop {
     display: none;
@@ -280,7 +282,7 @@ footer li a {
         justify-content: center;
         text-align: center;
         column-gap: 90px;
-        margin: 15px 0% 10px 65%;
+        margin: 35px 0% 10px 65%;
     }
 
     .desktop ul li {
@@ -288,8 +290,12 @@ footer li a {
     }
 
     .desktop ul li a{
-        color: #39bdc8;
-        text-decoration: none;
+        color: white;
+        text-decoration: underline white;
+        text-transform: uppercase;
+        text-decoration-style: wavy;
+        text-decoration-thickness: 1px;
+        
     }
 
     .intro {
@@ -299,25 +305,27 @@ footer li a {
     }
 
     .image {
-        padding: 30px 0% 40px 3%;
+        padding: 0px 0% 40px 3%;
+        margin: 20px;
     }
 
     .intro h3 {
         padding-top: 35px;
     }
     .skills {
-        max-width: 43%;
-        margin: 100px auto;
+        max-width: 1000px;
+        margin: 0px auto;
         padding: 40px 15px 0px 15px;
         box-shadow: none;
     }
     .container {
-        max-width: 150%;
         box-shadow: none;
     }
+    
     .row {
         display: flex;
         flex-direction: row;
+        justify-content: center;
         padding: 20px;
     }
     .col-4 {
@@ -325,7 +333,7 @@ footer li a {
     }
     .hobbies {
         max-width: 900px;
-        margin: -20px auto 60px auto;
+        margin: -60px auto 60px auto;
     padding: 30px 0 0 0;
     box-shadow: none;
     }
